# widle-insure

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  8_week_alpha_sprint_plan.md  MEMORY_NOTE.txt  README.md  ai_auto_insurance_platform_strategy.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  patch_ruff.py  patch_ruff_2.py  patch_ruff_4.py  pyproject.toml  sql_app.db  tailwind.config.ts  tech_stack_comparison.md  test_logging.py  vercel.json
.github/workflows/: pylint.yml  ruff.yml
api/: index.py
app/: globals.css
app/(marketing)/: layout.tsx  page.tsx
backend/: .pylintrc  Dockerfile  README.md  benchmark.py  benchmark2.py  benchmark3.py  benchmark4.py  benchmark5.py  pyproject.toml  requirements.txt  seed_data.py  sql_app.db
backend/alembic/: env.py
backend/app/: main.py  tasks.py
backend/scripts/: backup_db.sh  create_admin.py  generate_mock_dataset.py  seed_demo_data.py  train_fraud_model.py  train_yolo.py
backend/tests/: conftest.py  test_adjudication.py  test_ai_service.py  test_analyze_claim.py  test_auth.py  test_claims.py  test_config.py  test_cors.py  test_database.py  test_email.py  test_logging.py  test_main.py  test_payments.py  test_policies.py  test_schema_claims.py  test_security.py  test_storage.py
components/ui/: button.tsx
docs/: WEEK_8_COMPLETION.md  admin_user_guide.md  api_documentation.md  architecture.md  database_schema.md  demo_scenarios.md  demo_script.md  deployment_guide.md  environment_setup.md  faq.md  fnol_submission_guide.md  pitch_deck_outline.md  security_audit_checklist.md  troubleshooting_guide.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  build-manifest.json  trace
lib/: api-client.test.ts  api-client.ts  utils.test.ts
mobile/: package-lock.json  package.json
scripts/: benchmark_storage.py  setup-database.sh  validate_prompt_security.py
(+163 files in other folders)
