[project]
name = "widle-insure-api"
version = "0.1.0"
description = "FastAPI backend for AI auto insurance claims platform"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "fastapi[all]==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy[asyncio]>=2.0.26",
    "alembic==1.13.1",
    "asyncpg>=0.30.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "httpx==0.26.0",
    "python-multipart==0.0.22",
    "aiofiles==25.1.0",
    "python-magic==0.4.27",
    "passlib==1.7.4",
    "bcrypt==4.1.2",
    "python-jose[cryptography]==3.5.0",
    "anthropic==0.18.1",
    "openai==1.12.0",
    "sendgrid==6.10.0",
    "resend==0.7.0",
    "stripe==8.0.0",
    "sentry-sdk[fastapi]==1.40.6",
    "redis==5.0.1",
    "slowapi==0.1.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "backend"]
